# listr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
listr-backend/: Cargo.toml  README.md  localhost+1-key.pem  localhost+1.pem
listr-backend/migrations/2022-07-24-214503_create_lists/: down.sql  up.sql
listr-backend/migrations/2022-08-10-101043_add_users/: down.sql  up.sql
listr-backend/src/: backend.rs  db.rs  models.rs  schema.rs
listr-backend/src/api/: lists.rs  mod.rs  token.rs
listr-backend/src/db/: mod.rs  models.rs  schema.rs
listr-backend/src/middleware/: mod.rs  token_verifier.rs
listr-common/: Cargo.toml
listr-common/src/: lib.rs
listr-frontend/: Cargo.toml  Trunk.toml  index.html
listr-frontend/src/: frontend.rs  routes.rs
listr-frontend/src/components/: input.rs  lists.rs  mod.rs  nav.rs  user.rs
listr-frontend/src/components/list/: list.rs  list_item.rs
listr-frontend/src/pages/: home.rs  lists.rs  mod.rs
listr-frontend/src/requests/: lists.rs  mod.rs
