[package]
name = "listr-common"
version = "0.1.0"
authors = ["Angelos Gkountis <angelos.gkountis@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1.0.83"
jsonwebtokens = "^1.1.0"
