[package]
name = "listr-frontend"
version = "0.1.0"
authors = ["Angelos Gkountis <angelos.gkountis@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "listr_frontend"
path = "src/frontend.rs"

[dependencies]
yew = "^0.19"
yew-router = "^0.16"
yew-oauth2 = "^0.3.0"
yew-agent = "^0.1.0"
gloo-net = "^0.2"
web-sys = "^0.3"
wasm-bindgen-futures = "^0.4"
wasm-logger = "^0.2"
log = "^0.4"
listr-common = { path="../listr-common" }
serde_json = "^1.0"
